# oms

./: .gitignore  README.md  docker-compose.yml  make-me  make-proto
cmake/: enable_if_supported.cmake
configs/: orchestrator.yaml  worker_A.yaml  worker_B.yaml
generate_data/: api_test.py  generate.py  orchestrator_pb2.py  orchestrator_pb2.pyi  orchestrator_pb2_grpc.py  requirements.txt
misc/: oms_landscape.drawio
protos/: graph.proto  orchestrator.proto
src/: CMakeLists.txt  data_source.h  lock_free_queue.h  main.cc  safe_queue.h  signal_channel.h  thread_dispatcher.h  thread_guard.h
src/config/: config_parser.cc  config_parser.h
src/graph/: helper.cc  helper.h  in_memory_graph.h
src/grpc/: graph.grpc.pb.cc  graph.grpc.pb.h  graph.pb.cc  graph.pb.h  orchestrator.grpc.pb.cc  orchestrator.grpc.pb.h  orchestrator.pb.cc  orchestrator.pb.h
src/kafka/: kafka_builder.cc  kafka_builder.h  kafka_data_source.cc  kafka_data_source.h  kafka_delivery_report_cb.cc  kafka_delivery_report_cb.h  kafka_message_strategy.cc  kafka_message_strategy.h  kafka_print_message_strategy.cc  kafka_print_message_strategy.h  kafka_strategy_factory.cc  kafka_strategy_factory.h
src/logging/: factory.cc  file_logger.cc  log_processor.cc  log_signal.h  logging.h  spd_logger.cc  stdout_logger.cc
src/orchestrator/: api_runner.cc  api_runner.h  graph_client.cc  graph_client.h  graph_orchestrator.cc  graph_orchestrator.h  health_checker.cc  health_checker.h  orchestrator_api.cc  orchestrator_api.h  orchestrator_builder.cc  orchestrator_builder.h
src/worker/: graph_worker.cc  worker_graph_client.cc  worker_graph_client.h
